feat: apply contractual instruments to the kWh they cover and report scope 2 both ways on every run (T-01) (#25)
An instrument covered a facility's entire electricity; a PPA over 20,000 MWh
of 46,500 MWh zeroed the plant and understated market-based scope 2 by
11,686.5 t. Instruments now record the kWh and period they cover, the run
applies them line by line in date order until used up, and the balance is
priced at the residual mix or, failing that, the grid average, with the split
printed on the line. Every run reports both scope 2 methods with the basis of
the market-based figure, and the residual-mix disclosure prints on every
report. Closes audit findings F31 and F34; spec 07.3, migration V21. Also
keeps a blend composition in source order (a T-04 flake).


Claude-Session: https://claude.ai/code/session_011ECUmvLjmTKhK6CsJjfmL8

Co-authored-by: Claude Fable 5.1 <noreply@anthropic.com>